# iiwa-batter

./: .gitignore  .pre-commit-config.yaml  README.md  grad_student_gym.ipynb  pyproject.toml  run_full_trajectory.ipynb  run_full_trajectory.py  run_hydroelastic_tuning.ipynb  run_instantaneous_swing.ipynb  run_instantaneous_swing.py  run_naive_full_trajectory_optimization.py  run_pitch_check.ipynb  run_tee_ball.ipynb  runner.ipynb  simple_brute_force.py  video_demonstrations.ipynb  visualize_trajectory.ipynb
blender/: ball_keyframer.py  blender_reference.ipynb  export_for_blender.py  iiwa_keyframer.py  iiwa_keyframer_draft.py
iiwa_batter/: __init__.py  benchmark_real_time_operation.py  export_for_blender.py  iiwa_details.py  main_swing.py  naive_full_trajectory_optimization.py  physics.py  plotting.py  real_time_operation.py  save_load.py  swing_simulator.py  tee_ball.py  trajectory_library.py
iiwa_batter/assets/: iiwa14.urdf  iiwa14_joint_1_only.urdf  iiwa14_joint_7_only.urdf  iiwa14_limitless.urdf  iiwa14_tee_ball.urdf  kr6r900.urdf  make_assets.py
iiwa_batter/robot_constraints/: get_joint_constraints.py  kuka_details.json
iiwa_batter/sandbox/: ball_plate_state_90mph.json  hydroelastic_tuning.py  instantaneous_swing.py  pitch_check.py  tee_ball.py
iiwa_batter/swing_optimization/: full_trajectory.py  graduate_student_descent.py  instantaneous_swing.py  partial_trajectory.py  stochastic_gradient_descent.py  swing_impact.py  trajectory_helpers.py
iiwa_batter/swing_optimization/trajectories/crash_trajectory/: torque_trajectory.csv
iiwa_batter/tests/: test_full_trajectory.py  test_naive_full_trajectory_optimization.py  test_physics.py  test_real_time_operation.py  test_stochastic_gradient_descent.py  test_swing_impact_optimization.py  test_swing_simulator.py  test_trajectory_functions.py
iiwa_keyframer/: ball_keyframer.py
